1 Web API and Rest Controller/RestServiceBookApi/src/main/java/com/example/restservicebookapi/utils/error/CourseNotFoundException.java
package com.example.restservicebookapi.utils.error;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(code = HttpStatus.NOT_FOUND, reason = "Course not found")
public class CourseNotFoundException extends RuntimeException {
    public CourseNotFoundException(Long id) {
        super("Course with id " + id + " not found");
    }
}
